# LiveSketch-Android

./: .gitmodules  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NDIThreadSender.cpp  NDIThreadSender.h  main.cpp
app/src/main/cpp/Brush/: Brush.cpp  Brush.h
app/src/main/cpp/DevUI/: IMGUIMenu.cpp  IMGUIMenu.h
app/src/main/cpp/NDI/: NDISender.cpp  NDISender.h
app/src/main/cpp/Renderer/: Renderer.cpp  Renderer.h
app/src/main/cpp/layers/: Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h
gradle/wrapper/: gradle-wrapper.properties
